# eglstreamwrapper

./: CMakeLists.txt
src/: egl.c  eglstreamwrapper-server.c  eglstreamwrapper-server.h  eglstreamwrapper.xml  wayland-egl-priv.h  wayland-egl.c  wayland-egl.h  wrappedfuncs.h  wrapper.c  wrapper.h
